Address SQ comment